# IngenieriaInformaticaUCO

./: README.md
AAP/AAP Otros/: UNIDAD II. ABSTRACCIONES Y TECNOLOGIA DE LOS COMPUTADORES. RENDIMIENTO.ppsx
AAP/Prácticas/: Practica 1 AAP.docx  Practica 2 AAP.docx  Practica 4 AAP.docx  Practica 5 AAP.docx  Práctica 6 AAP.docx  Resumen AAP Practicas.docx  baseP1yP2.asm
AAP/Teoría/: Resumen AAP Teoria.docx  Tarea 1 AAP.docx  Tarea 2 AAP.docx  Tarea 3 AAP.docx  Tarea 6 AAP.docx
AP/AP Dani/: ALGORITMO DE FOX.docx  Evaluación de dos procesadores multinúcleos (Intel y AMD).pptx  P2_AP.docx  P4_AP.docx  P5_AP.docx  PRACTICA6 AP.docx  Practica1_AP.docx  Practica1_codigo.c  TRABAJO_AP.docx
AP/Prácticas/: CodigoPractica1.c  CodigoPractica3A.c  CodigoPractica3B.c  CodigoPractica3C.c  CodigoPractica3F.c  CodigoPractica51I.c  CodigoPractica51J.c  CodigoPractica51K.c  CodigoPractica51hilos.c  CodigoPractica52I.c  CodigoPractica52J.c  CodigoPractica52K.c  CodigoPractica52hilos.c  CodigoPractica53I.c  CodigoPractica53K.c  CodigoPractica53hilos.c  CodigoPractica54IJK.c  CodigoPractica54IKJ.c  CodigoPractica54JKI.c  Práctica 1 AP.docx  Práctica 2 AP.docx  Práctica 3 AP.docx  Práctica 5 AP.docx
CAL/Trabajo Series/: Trabajo Series Cálculo.docx
DASDP/Teoría/: Exámen Diseño.docx  Test Diseño.xml
EAE/: Problemas temas 5 y 6 .pptx
EAE/Plan de Empresa/: PLAN DE EMPRESA SecondNote actualizado.xlsx  Plan de empresa G1M1W7.xlsx
ED/Practicas/avl-tree/: CMakeLists.txt  DO_NOT_MODIFY.TXT  avltree.hpp  avltree_node.hpp  avltree_node_imp.hpp  test_avltree.cpp
ED/Practicas/avl-tree/04_tests_avltnode/: 02  03  04
ED/Practicas/avl-tree/06_tests_compute_min_max_branch_length/: 03  04
ED/Practicas/repaso/P2kdtree/: CMakeLists.txt  kdtree.cpp
ED/Practicas/repaso/P2kdtree/02_tests_find_nn_L1/: 07
ED/Practicas/repaso/P2kdtree/binary_tree/: CHANGELOG.txt  README.md  test_btree_node.cpp
ED/Practicas/repaso/P2kdtree/pattern/01_tests_pattern/: 04
ED/Practicas/repaso/P5dos_detector-open_addressing/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  dos_detector.cpp  hash.hpp  hash_table_iterator_imp.hpp  test_hash_function.cpp
ED/Practicas/wgraph_paths/: CMakeLists.txt  DO_NOT_MODIFY.TXT  test_astar.cpp  test_dijkstra.cpp
ED/Practicas/wgraph_paths/03_tests_astar/: 01  02
ED/Practicas/wgraph_paths/graph/: edge.hpp  edge_imp.hpp  graph_imp.hpp
ED/Practicas/wgraph_paths/graph/02_tests_graph/: 03  07  10  12
ED/Practicas/wgraph_paths/matrix/: matrix.hpp
ED/Practicas/wgraph_paths/priority_queue/: README.md
ED/Practicas/wgraph_paths/priority_queue/01_heap_editing/: 01  03  08
ED/Practicas/wgraph_paths/priority_queue/02_heapify/: 03
ED/Practicas/wgraph_paths/priority_queue/03_heapsort/: 01  05  08
ED/Practicas/wgraph_paths/priority_queue/04_pqueue/: 02
ED/Practicas/wgraph_traversals/: CMakeLists.txt  DO_NOT_MODIFY.TXT  kruskal_algorithm_imp.hpp  prim_algorithm_imp.hpp  test_traversals.cpp
ED/Practicas/wgraph_traversals/graph/: city.cpp  city.hpp  edge_imp.hpp  graph_imp.hpp  item.hpp
ED/Practicas/wgraph_traversals/graph/02_tests_graph/: 02  06  09  17
ED/p32goama/kdtree/pattern/: CMakeLists.txt  pattern.cpp
ED/p32goama/priority_queue/: CMakeLists.txt  heap_imp.hpp
ED/p32goama/priority_queue/02_heapify/: 01  05
ED/p32goama/priority_queue/04_pqueue/: 01
ED/p32goama/vector2d/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  run_tests.py  test_vector2d.cpp  vector2d_imp.hpp
ED/p32goama/wgraph_paths/graph/: CHANGELOG.txt  CMakeLists.txt  graph_imp.hpp  vertex.hpp  vertex_imp.hpp
ED/p32goama/wgraph_paths/graph/02_tests_graph/: 05  25
ED/repaso/: Funciones  funciones.cpp  funciones.txt
ED/repaso/P2kdtree/binary_tree/: CMakeLists.txt  btree_imp.hpp  btree_node_imp.hpp  btree_utils.hpp  btree_utils_imp.hpp
ED/repaso/P6wgraph_paths/matrix/: CHANGELOG.txt  CMakeLists.txt
EST/Jamovi/: 9boletin4.omv  ejemplo1R.omv
IP/Practicas/: Practica 10 Ficheros.docx  Practica 2 Esquemas iterativos.docx  Practica 5 Vectores.docx  Practica 6 Matrices.docx  Practica 8 Cadenas.docx
IP/conjuntos/: 1conjuntos.cpp  1conjuntos.eje  2conjuntos.cpp  Práctica Conjuntos.docx
IP/enero2023/: 2enero2023es510.cpp  2enero2023es510.eje  3enero2023.cpp  4enero2023es86.cpp  5enero2023.cpp  7enero2023.cpp  7enero2023.eje  8enero2023.eje  9enero2023.cpp
IP/practica10/: 1practica10.cpp
IP/practica2/: 1practica2.eje  4practica2.cpp  4practica2.eje  6practica2.cpp  7practica2.cpp  8practica2.cpp  8practica2.eje  9practica2.cpp  9practica2.eje
IP/practica3/: 1practica3.cpp  2practica3.eje  3practica3.eje  4practica3.cpp  5practica3.cpp  practica 3_ esquemas iterativos (2).docx
IP/practica4/: 1practica4.eje  3practica4.cpp  4practica4.eje  7practica4.cpp  8practica4.cpp  8practica4.eje  practica 4_ funciones.docx
IP/practica5/: 11practica5.cpp  11practica5.eje  12practica5.cpp  14practica5.cpp  14practica5.eje  15practica5.eje  3practica5.eje  4practica5.eje  6practica5.eje  7practica5.cpp  7practica5.eje  8practica5.eje  9practica5.cpp
IP/practica6/: 2practica6.cpp  2practica6.eje  3practica6.cpp  4practica6.cpp  4practica6.eje  5practica6.cpp  6practica6.eje  7practica6.cpp  7practica6.eje  8practica6.cpp
IP/practica7/: 1practica7.eje  practica 7_ estructuras.docx
IP/practica8/: 2practica8.cpp  2practica8.eje  3practica8.cpp  5practica8.cpp  5practica8.eje  6practica8.cpp  7practica8.cpp
IP/practica9/: 2practica9.eje  3practica9.cpp  practica 9_ miscelaneo.docx
IS/Teoria/: Parcial 1 IS.docx  Parcial 2 IS.docx  Parcial 3 IS.docx
LE/Actividades Clase/: Actividad Clase Tema 1 Legislación.docx  Actividad Clase Tema 10.1 Legislación.docx  Actividad Clase Tema 10.2 Legislación.docx  Actividad Clase Tema 12 Legislación.docx  Actividad Clase Tema 13 Legislación.docx  Actividad Clase Tema 14 Legislación.docx  Actividad Clase Tema 15 Legislación.docx  Actividad Clase Tema 16 Legislación.docx  Actividad Clase Tema 2 Legislación.docx  (+2 more)
MP/: colas.c  listas.c  matrices.c  repasoMP.c  vectores.c
POO/p7/marketplace/src/app/: CMakeLists.txt  app-main.cc
SSOO/: Resumen Practicas SSOO.c
(+1379 files in other folders)
